auth midleware cors and group issue fixed and swagger base url added
