# server/cmd/api/docs/swagger.yaml
@@ -125,7 +125,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/auth/google-auth:
+  /auth/google-sign-in:
     post:
       description: API for user to login with google
       operationId: UserGoogleLogin
@@ -159,49 +159,7 @@ paths:
       summary: Login with google (User)
       tags:
       - User Authentication
-  /api/auth/login:
-    post:
-      description: API for user to login with email | phone | user_name with password
-      operationId: UserLogin
-      parameters:
-      - description: Login Details
-        in: body
-        name: inputs
-        required: true
-        schema:
-          $ref: '#/definitions/request.Login'
-      responses:
-        "200":
-          description: Successfully logged in
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/response.TokenResponse'
-              type: object
-        "400":
-          description: Invalid inputs
-          schema:
-            $ref: '#/definitions/response.Response'
-        "401":
-          description: User not exist with given login credentials
-          schema:
-            $ref: '#/definitions/response.Response'
-        "403":
-          description: User blocked by admin
-          schema:
-            $ref: '#/definitions/response.Response'
-        "500":
-          description: Failed to login
-          schema:
-            $ref: '#/definitions/response.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Login with password (User)
-      tags:
-      - User Authentication
-  /api/auth/renew-access-token:
+  /auth/renew-access-token:
     post:
       description: API for user to renew access token using refresh token
       operationId: UserRenewAccessToken
@@ -251,7 +209,49 @@ paths:
       summary: Renew Access Token (User)
       tags:
       - User Authentication
-  /api/auth/signup:
+  /auth/sign-in:
+    post:
+      description: API for user to login with email | phone | user_name with password
+      operationId: UserLogin
+      parameters:
+      - description: Login Details
+        in: body
+        name: inputs
+        required: true
+        schema:
+          $ref: '#/definitions/request.Login'
+      responses:
+        "200":
+          description: Successfully logged in
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.TokenResponse'
+              type: object
+        "400":
+          description: Invalid inputs
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: User not exist with given login credentials
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: User blocked by admin
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failed to login
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Login with password (User)
+      tags:
+      - User Authentication
+  /auth/sign-up:
     post:
       description: API for user to register a new account
       operationId: UserSignUp
@@ -284,7 +284,7 @@ paths:
       summary: Signup (User)
       tags:
       - User Authentication
-  /api/chats:
+  /chats:
     get:
       description: API for user to get all recent chats of user with others
       operationId: GetRecentChats
@@ -352,7 +352,7 @@ paths:
       summary: Save New chat (User)
       tags:
       - Users Chats
-  /api/chats/{chat_id}/messages:
+  /chats/{chat_id}/messages:
     get:
       description: API for user to get all messages in a specific chat
       operationId: GetAllMessages
@@ -395,7 +395,7 @@ paths:
       summary: Get chats messages (User)
       tags:
       - Users Chats
-  /api/users/all:
+  /users:
     get:
       description: API for user to list all users in the application
       operationId: ListUsers
